# X-App

./: .gitignore  README.md
x-backend/: .env  Cargo.toml  docker-compose.yml
x-backend/migrations/: 001_initial.sql
x-backend/src/: auth.rs  config.rs  db.rs  main.rs
x-backend/src/middleware/: auth_middleware.rs  mod.rs
x-backend/src/models/: media.rs  mod.rs  notifiication.rs  post.rs  user.rs
x-backend/src/services/: admin_service.rs  ai_service.rs  feed_service.rs  interaction_service.rs  kafka_service.rs  media_service.rs  mod.rs  notification_service.rs  payment_service.rs  post_service.rs  profile_service.rs  rabbitmq_service.rs  search_service.rs  user_service.rs  websocket_service.rs
x-backend/src/utils/: jwt.rs  mod.rs  password.rs
x-frontend/: package-lock.json  package.json
x-frontend/src/app/: page.tsx
x-frontend/src/app/components/: Login.tsx  Register.tsx
x-frontend/src/app/dashboard/: page.tsx
x-frontend/src/components/ui/: dialog.tsx
