[package]
name = "x-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
actix-multipart = "0.6"
actix-cors = "0.6"
actix-web-httpauth = "0.8"
tokio = { version = "1.0", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
argon2 = "0.5"
jsonwebtoken = "9.0"
validator = { version = "0.16", features = ["derive"] }
dotenv = "0.15"
env_logger = "0.10"
log = "0.4"
redis = { version = "0.23", features = ["tokio-comp"] }
reqwest = { version = "0.11", features = ["json"] }
futures-util = "0.3"
actix-files = "0.6.6"


# Real-time WebSocket dependencies
actix-web-actors = "4.2"
actix = "0.13"
tokio-tungstenite = "0.21"
tungstenite = "0.21"

# Message Queue dependencies
rdkafka = { version = "0.38.0", features = ["cmake-build", "ssl", "sasl"] }
lapin = "3.1.0"
deadpool-lapin = "0.13.0"
tokio-amqp = "2.0.0"


# AI/LLM dependencies
candle-core = "0.9.1"
candle-nn = "0.9.1"
candle-transformers = "0.9.1"
tokenizers = "0.21.4"



